--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
-body{
-   color: navy;
+/*******Login Component*******/
+ 
+.login-form {
+   background-color: green;
+   border: 4px solid red;
+   max-width: 75%;
+   margin: auto;
+   padding: 2rem;
+   display: block;
 }
+
+
