--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,17 @@
-/*******Login Component*******/
- 
-.login-form {
-   background-color: green;
-   border: 4px solid red;
+
+/*******LoginForm Component*******/
+.login-form, .reg-form {
+   background-color: #F7F3F9;
+   border: 4px groove #9E88C4;
    max-width: 75%;
    margin: auto;
    padding: 2rem;
    display: block;
+}
+
+.login-btn, .reg-btn {
+   background-color: #CB8E9B;
+   border: 2.5px solid #905175;
 }
 
 
