--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,28 @@ a {
 /*******NavBar Component*******/
 .nav-links {
    margin-right: none;
+   border: 4px solid red;
+}
+
+/*******BrandBanner Component*******/
+.brand-title {
+   background-color: #e2e2e4c4;
+   border: 8px double #4A2729;
+   padding: 80px 350px;
+   border-radius: 30px;
+   font-size: 60px;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-weight: bold;
+}
+
+.brand-box {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-image: url(./images/succ-bkg.jpg);
+   height: 20rem;
+   color: #8F7687;
+   text-shadow: 2px 2px #4A2729;
 }
 
 /*******Login/Registration Components*******/
@@ -54,6 +76,67 @@ a {
    background-color: red;
 }
 
+/*****PRODUCT CARD COMPONENT*****/
+.product-card {
+   margin-top: 20px;
+   margin-bottom: 20px;
+   border: 6px ridge #905175;
+   border-radius: 10px;
+   box-shadow: 2px 2px 2px;
+   color: #7A3F5C;
+   background-color: #F7F3F9;
+
+}
+
+.card-img {
+   margin: auto;
+}
+
+.card-body {
+   background-color: #F7F3F9;
+   padding: 3px;
+   max-width: 90%;
+   flex-direction: column;
+   margin: auto;
+   margin-top: 4px;
+   margin-bottom: 4px;
+}
+
+.card-title {
+   font-size: xx-large;
+   text-shadow: 1px 1px #F3ECDF;
+   text-align: center;
+}
+
+.succ-name {
+   font-size: x-large;
+   text-align: center;
+}
+
+.succ-price {
+   display: flex;
+   justify-content: center;
+   font-size: larger;
+   font-weight: bold;
+}
+
+.add-cart {
+   max-width: 7rem;
+   display: flex;
+   justify-content: center;
+   background-color: #CB8E9B;
+   border: 2px ridge #4A2729;
+}
+
+.add-cart:hover {
+   background-color: #905175;
+   color: #F7F3F9;
+   border-color: #F7F3F9;
+}
+
+/*****PRODUCT TABLE COMPONENT*****/
+
+
 /*****FOOTER*****/
 .footer {
    font-size: small;
@@ -61,7 +144,7 @@ a {
 
 /*******NewsletterForm Component*******/
 .footer-newsletter {
-   background-color: rgb(232, 229, 229);
+   background-color: #B3C1B3;
 }
 
 .newsletter-signup {
@@ -89,8 +172,17 @@ a {
 }
 
 /*******FooterMain Component*******/
+.footer-container {
+   background-color: #B3C1B3;
+}
+
+#footer-table {
+   background-color: #E2E2E4;
+}
+
 thead {
    font-size: medium;
+   border-bottom: 2px solid #E2E2E4;
 }
 
 .links {
