--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+@media (max-width: 768px) {
+   .brand-title {
+      font-size: 1.5rem;
+   }
+}
+
+@media (max-width: 576px) {
+   .brand-title {
+      font-size: 1rem;
+   }
+}
+
 body {
    background-color: #E8E5E5;
 }
@@ -12,35 +24,47 @@ a {
    color: black;
 }
 
-.succ-banner {
-   height: 20rem;
+/*******NavBar Component*******/
+.nav-btn {
+   background-color: #b89aaef2;
+   border: 3px solid #7A3F5C;
+   color: #4A2729;
+   border-radius: 10px;
+   margin-right: 5px;
 }
 
-/*******NavBar Component*******/
-.nav-links {
-   margin-right: none;
-   border: 4px solid red;
+.nav-btn:hover {
+   background-color: #d0b3c7;
+   border: 3px solid #7A3F5C;
+   color: black;
+}
+
+.nav-btn:active {
+   background-color: #b89aaef2;
+   border: 3px solid #7A3F5C;
+   color: #4A2729;
+
 }
 
 /*******BrandBanner Component*******/
-.brand-title {
-   background-color: #e2e2e4c4;
-   border: 8px double #4A2729;
-   padding: 80px 350px;
-   border-radius: 30px;
-   font-size: 60px;
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   font-weight: bold;
-}
-
 .brand-box {
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url(./images/succ-bkg.jpg);
    height: 20rem;
-   color: #8F7687;
-   text-shadow: 2px 2px #4A2729;
+   color: #4A2729;
+   text-shadow: 2px 2px white;
+}
+
+.brand-title {
+   background-color: #faebe9;
+   border: 8px inset #905175;
+   padding: 2rem 10rem;
+   border-radius: 10px;
+   font-size: 40px;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   text-align: center;
 }
 
 /*******Login/Registration Components*******/
@@ -166,6 +190,10 @@ a {
    margin-right: 3px;
 }
 
+.form-input:active {
+   border: #905175;
+}
+
 .news-btn {
    background-color: maroon;
    margin-bottom: 5px;
@@ -177,7 +205,8 @@ a {
 }
 
 #footer-table {
-   background-color: #E2E2E4;
+   background-color: #F7F3F9;
+   margin-bottom: 0px;
 }
 
 thead {
