--- a/src/App.css
+++ b/src/App.css
@@ -97,9 +97,7 @@ a {
    border-color: #F7F3F9;
 }
 
-.login-btn:active, .reg-btn:active {
-   background-color: red;
-}
+
 
 /*****PRODUCT CARD COMPONENT*****/
 .product-card {
@@ -242,4 +240,26 @@ thead {
 
 .terms-privacy p {
    margin-right: .5rem;
+}
+
+/*******CartPage*******/
+
+.cart-container {
+   background-image: url(./images/cartSucculent.jpg);
+}
+
+.cart-card {
+   background-color: #becfd5c0;
+   border-radius: 20px;
+   padding: 2rem;
+   margin: 2rem;
+}
+
+.increase-btn, .decrease-btn {
+   background-color: #cb8e9bad;
+   border: 1px solid #7A3F5C;
+   color: black;
+   margin: 1rem;
+
+
 }
